--- a/scss/_checkFullOffer.scss
+++ b/scss/_checkFullOffer.scss
@@ -1,3 +1,7 @@
+.checkFullOfferContainer {
+    overflow: hidden;
+}
+
 .checkFullOffer {
     background-color: $mainColorLighter;
     height: 300px;
