--- a/scss/mains.scss
+++ b/scss/mains.scss
@@ -10,10 +10,11 @@
 
 @import'variables';
 @import'modulars';
+@import'animatable';
 @import'navigation';
 @import'carousel';
 @import'squares';
-@import'aboutMassage';
+// @import'aboutMassage';
 @import'aboutUs';
 @import'maderotherapy';
 @import'mobility';
@@ -21,3 +22,4 @@
 @import'contact';
 @import'footer';
 @import'burgerMenu';
+@import'offer';
