--- a/scss/_aboutMassage.scss
+++ b/scss/_aboutMassage.scss
@@ -1,74 +1,74 @@
-.aboutMassage {
-    background-color: $bgcColor;
-    background: url(/SVG/topography1test.svg);
-    position: relative;
-    overflow: hidden;
-}
+// .aboutMassage {
+//     background-color: $bgcColor;
+//     background: url(/SVG/topography1test.svg);
+//     position: relative;
+//     overflow: hidden;
+// }
 
-.aboutMassage__container {
-    display: flex;
-    margin: 60px 20px;
-    height: 200px;
-    justify-content: space-between;
+// .aboutMassage__container {
+//     display: flex;
+//     margin: 60px 20px;
+//     height: 200px;
+//     justify-content: space-between;
 
-    .aboutMassage__square {
-        z-index: 1;
-        background-color: #fff;
-        padding: 1%;
-        display: flex;
-        align-items: center;
-        height: 100%;
-        width: 200px;
-        border: 2px solid black;
-        font-size: 24px;
-        font-family: $headerFont;
-    }
+//     .aboutMassage__square {
+//         z-index: 1;
+//         background-color: #fff;
+//         padding: 1%;
+//         display: flex;
+//         align-items: center;
+//         height: 100%;
+//         width: 200px;
+//         border: 2px solid black;
+//         font-size: 24px;
+//         font-family: $headerFont;
+//     }
 
-    .aboutMassage__textContainer {
-        z-index: 2;
-        background-color: $bgcColor;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        margin: 20px;
-        width: 75%;
-        font-size: 16px;
-        font-family: $contentFont;
+//     .aboutMassage__textContainer {
+//         z-index: 2;
+//         background-color: $bgcColor;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-around;
+//         margin: 20px;
+//         width: 75%;
+//         font-size: 16px;
+//         font-family: $contentFont;
 
-        .aboutMassage__btn {
-            background-color: $mainColor;
-            border: none;
-            width: 200px;
-            height: 40px;
-            font-size: 24px;
-            box-shadow: 5px 10px 8px 2px rgba(0, 0, 0, 0.25);
+//         .aboutMassage__btn {
+//             background-color: $mainColor;
+//             border: none;
+//             width: 200px;
+//             height: 40px;
+//             font-size: 24px;
+//             box-shadow: 5px 10px 8px 2px rgba(0, 0, 0, 0.25);
 
-        }
-    }
-}
+//         }
+//     }
+// }
 
-.aboutMassage__textContent--image {
-    background-image: url(/images/Relaxationzone.jpg);
-    background-position: center;
-    background-size: cover;
-}
+// .aboutMassage__textContent--image {
+//     background-image: url(/images/Relaxationzone.jpg);
+//     background-position: center;
+//     background-size: cover;
+// }
 
-.aboutMassage__vector {
-    position: absolute;
-    height: 30vw;
-    width: 30vw;
-    background: url(/SVG/topography1.svg);
-    background-size: contain;
-}
+// .aboutMassage__vector {
+//     position: absolute;
+//     height: 30vw;
+//     width: 30vw;
+//     background: url(/SVG/topography1.svg);
+//     background-size: contain;
+// }
 
-.aboutMassage__vector--top {
-    top: -15%;
-    left: -12%;
-    transform: rotate(-25deg)
-}
+// .aboutMassage__vector--top {
+//     top: -15%;
+//     left: -12%;
+//     transform: rotate(-25deg)
+// }
 
-.aboutMassage__vector--bottom {
-    bottom: -15%;
-    right: -12%;
-    transform: rotate(-25deg)
-}
+// .aboutMassage__vector--bottom {
+//     bottom: -15%;
+//     right: -12%;
+//     transform: rotate(-25deg)
+// }
