--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -15,10 +15,15 @@
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
-        background-color: rgba(51, 51, 51, 0.424);
+        background-color: rgba(51, 51, 51, 0.507);
         color: white;
         text-align: center;
         font-family: $headerFont;
+        transition: 0.6s;
+
+        &:hover {
+            background-color: rgba(51, 51, 51, 0.808);
+        }
 
         p {
             font-size: 36px;
@@ -30,11 +35,22 @@
             font-size: 80px;
         }
 
-        button {
-            background-color: $mainColorLighter;
+
+        a {
             width: 30%;
             height: 15%;
-            font-size: 24px;
+
+            button {
+                background-color: $mainColorLighter;
+                width: 100%;
+                height: 100%;
+                font-size: 20px;
+                transition: 0.6s;
+
+                &:hover {
+                    background-color: $mainColor;
+                }
+            }
         }
     }
 }
@@ -73,7 +89,13 @@
         -webkit-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
         -moz-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
         box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
+        transition: 0.6s;
 
+        &:hover {
+            -webkit-box-shadow: 10px 10px 10px 0px rgba(255, 254, 254, 0.75);
+            -moz-box-shadow: 10px 10px 10px 0px rgba(255, 254, 254, 0.75);
+            box-shadow: 10px 10px 10px 0px rgba(255, 254, 254, 0.75);
+        }
     }
 
     .owl-next {
@@ -110,10 +132,15 @@
         .carousel__textContent {
             width: 50%;
 
-            button {
+            a {
                 width: 40%;
                 height: 15%;
-                font-size: 20px;
+
+                button {
+                    width: 100%;
+                    height: 100%;
+                    font-size: 20px;
+                }
             }
         }
     }
@@ -131,11 +158,16 @@
                 font-size: 50px;
             }
 
-            button {
-                background-color: $mainColorLighter;
+            a {
                 width: 30%;
                 height: 15%;
-                font-size: 16px;
+
+                button {
+                    background-color: $mainColorLighter;
+                    width: 100%;
+                    height: 100%;
+                    font-size: 16px;
+                }
             }
         }
     }
@@ -153,11 +185,16 @@
                 font-size: 16px;
             }
 
-            button {
-                background-color: $mainColorLighter;
+            a {
                 width: 40%;
                 height: 15%;
-                font-size: 16px;
+
+                button {
+                    background-color: $mainColorLighter;
+                    width: 100%;
+                    height: 100%;
+                    font-size: 16px;
+                }
             }
         }
     }
@@ -171,11 +208,16 @@
                 font-size: 16px;
             }
 
-            button {
-                background-color: $mainColorLighter;
+            a {
                 width: 40%;
                 height: 15%;
-                font-size: 12px;
+
+                button {
+                    background-color: $mainColorLighter;
+                    width: 100%;
+                    height: 100%;
+                    font-size: 12px;
+                }
             }
         }
     }
@@ -183,6 +225,24 @@
 
 @media(max-width:500px) {
     .carousel {
-        display: none;
+        top: 60px;
+
+        .carousel__textContent {
+            display: none;
+        }
+    }
+
+    .owl-dots {
+
+        .owl-dot {
+            height: 10px;
+            width: 10px;
+        }
+
+        .active {
+            border: 1px solid black;
+            background-color: $mainColor;
+            opacity: 1;
+        }
     }
 }
