--- a/scss/_modulars.scss
+++ b/scss/_modulars.scss
@@ -14,3 +14,16 @@ button {
     margin: 0 auto;
     max-width: 1000px;
 }
+
+div,
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.fbgt {
+    background: transparent;
+}
