--- a/scss/_squares.scss
+++ b/scss/_squares.scss
@@ -1,8 +1,17 @@
 .squares__list {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+    .scrollpoint {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        background-color: black;
+        bottom: 0;
+    }
 
     .squares__item {
         display: flex;
@@ -30,8 +39,13 @@
         .squares__btn {
             width: 200px;
             height: 50px;
-            background-color: $mainColor;
+            background-color: $mainColorLighter;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            transition: 0.6s;
+
+            &:hover {
+                background-color: $mainColor;
+            }
 
             i {
                 margin-left: 5%;
