--- a/scss/_maderotherapy.scss
+++ b/scss/_maderotherapy.scss
@@ -4,7 +4,7 @@
     .massages__image {
         width: 50%;
         height: auto;
-        background: url(../images/4.jpg);
+        background: url(../images/ABedul_masaz4.jpg);
         background-size: cover;
         background-position: center;
     }
