--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,9 @@
 $buttonFont:'Lato';
 $headerFont:'Kanit';
 $contentFont:'Martel';
+$heroFont:'Nunito Sans';
 $mainColor:#0D6F3C;
 $mainColorLighter:#4CAB7A;
 $bgcColor:#e6004960;
 $squareColor:#FFF5E9;
+$squareColor2:#fdead0;
