--- a/scss/_offer.scss
+++ b/scss/_offer.scss
@@ -1,88 +1,110 @@
 .offer {
     background: url(../images/pattern.png);
-    padding: 160px 0 100px 0;
-    text-align: center;
+    padding: 60px 0 100px 0;
+}
 
-    .line {
-        width: 15%;
-    }
+.offer__hero {
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    background: url(../images/flowers.jpg);
+    background-position: center;
+    background-size: cover;
 
-    .aboutUs__introduction {
-        margin-bottom: 50px;
-
-        .aboutUs__header {
-            margin-bottom: 5px;
-            display: block;
-            font-family: $headerFont;
-            border-radius: 16px;
-            text-transform: uppercase;
-            font-weight: 400;
-            box-shadow: -12px -12px 12px 0 rgba(255, 255, 255, 1), 12px 12px 12px 0 rgba(0, 0, 0, .03);
-        }
+    .hero__header {
+        padding: 20px 150px;
+        font-size: 50px;
+        font-family: $heroFont;
+        font-weight: 100;
+        letter-spacing: 2px;
+        color: white;
+        border: 2px solid white;
     }
 }
 
-.offer__item {
+.offerContainer {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 20px;
-    background-color: $squareColor;
-    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
-    .offer__description {
-        display: flex;
-        width: 550px;
-        height: 300px;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        font-family: $contentFont;
-        background-color: $squareColor;
+.offer__items {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+
+    .offer__item {
+
+        padding: 20px 0;
 
         .offer__header {
+            margin-bottom: 20px;
             font-weight: 400;
             font-family: $headerFont;
             color: $mainColor;
             font-size: 24px;
-            text-transform: uppercase;
-            text-align: center;
         }
 
         p {
-            text-align: center;
+            margin-bottom: 20px;
+            font-family: $contentFont;
         }
     }
+}
 
-    .offer__image {
+.offer__images {
+    width: 480px;
+    margin-left: 20px;
 
-        margin: 20px 20px;
-        width: 410px;
-        height: 260px;
+    img {
+        max-height: 600px;
+        margin-bottom: 40px;
+        width: 100%;
+    }
+}
+
+.contact__container--offer {
+    box-shadow: none;
+}
+
+@media(max-width:1000px) {
+    .offerContainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .offer__items {
+        width: 100%;
+        padding: 0px 16px;
+    }
+
+    .offer__images {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        width: 80%;
+        margin-left: 0;
+
 
         img {
             width: 100%;
-            height: 100%;
-        }
-    }
-
-
-}
-
-@media(max-width:333px) {
-    .offer__item {
-        .offer__description {
-            height: 350px;
         }
     }
 }
 
-.offer__item:nth-child(odd) {
-    .offer__description {
-        order: 2;
+@media(max-width:550px) {
+    .offer__hero {
+        margin-bottom: 50px;
+
+
+        .hero__header {
+            padding: 20px 50px;
+
+        }
     }
 
-    .offer__image {
-        order: 1;
+    .offer__images {
+        width: 100%;
+        margin-bottom: 20px;
     }
 }
