--- a/scss/_mobility.scss
+++ b/scss/_mobility.scss
@@ -24,7 +24,7 @@
     .mobility__image {
         width: 500px;
         height: 400px;
-        background: url(../SVG/car.svg);
+        background: url(../images/car.svg);
         background-repeat: no-repeat;
         background-position: center;
     }
