--- a/css/mains.css
+++ b/css/mains.css
@@ -830,7 +830,7 @@ a {
 .mobility__container .mobility__image {
   width: 500px;
   height: 400px;
-  background: url(../SVG/car.svg);
+  background: url(../images/car.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
