--- a/css/mains.css
+++ b/css/mains.css
@@ -25,6 +25,18 @@ button {
   max-width: 1000px;
 }
 
+.wrapper--blog {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 1600px;
+}
+
+.line--blog {
+  width: 100%;
+  height: 50px;
+}
+
 div,
 input,
 textarea,
@@ -918,7 +930,7 @@ a {
   }
   .checkFullOffer .chceckFullOffer__btn {
     height: 100px;
-    width: 90%;
+    width: 100%;
     font-size: 24px;
     letter-spacing: 2px;
     border: 2px solid white;
@@ -1281,6 +1293,224 @@ a {
   .offer__images {
     width: 100%;
     margin-bottom: 20px;
+  }
+}
+
+.blog {
+  padding-top: 110px;
+  background: url(../images/pattern.png);
+}
+
+.blog__hero {
+  margin: 0 0 50px 2%;
+  font-size: 60px;
+  font-family: "Kanit";
+}
+
+.blog__hero h1 {
+  font-weight: normal;
+}
+
+.blog__hero h2 {
+  font-weight: normal;
+  font-size: 24px;
+}
+
+.blog__hero span {
+  color: #0D6F3C;
+}
+
+.articles {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.article {
+  width: 750px;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  font-size: 20px;
+  font-family: "Martel";
+}
+
+.article .article__date {
+  font-family: "Kanit";
+  color: #333;
+  margin: 20px;
+}
+
+.article .article__imageContainer {
+  height: 500px;
+  overflow: hidden;
+}
+
+.article .article__image {
+  width: 100%;
+  transition: 0.5s;
+}
+
+.article .article__image:hover {
+  opacity: 0.6;
+  transform: scale(1.2);
+}
+
+.article .article__header {
+  font-family: "Kanit";
+  font-weight: normal;
+  margin: 20px;
+  color: #0D6F3C;
+}
+
+.article .article__header a {
+  text-decoration: none;
+  color: #4CAB7A;
+  transition: 0.3s;
+}
+
+.article .article__header a:hover {
+  color: #0D6F3C;
+}
+
+.article .article__content {
+  margin: 20px;
+  margin-bottom: 60px;
+  color: #333;
+}
+
+.article .article__content .inarticletitle {
+  color: #0D6F3C;
+  font-weight: 700;
+}
+
+.article .article__content .span--green {
+  color: #0D6F3C;
+}
+
+.article .article__content a {
+  color: #4CAB7A;
+  transition: 0.3s;
+}
+
+.article .article__content a:hover {
+  color: #0D6F3C;
+}
+
+.article--single {
+  width: 95%;
+}
+
+.article--single .article__date {
+  margin: 0;
+  padding: 20px;
+  border-bottom: 1px solid #777;
+}
+
+.article--single .article__content {
+  margin-top: 40px;
+}
+
+.article--single .article__imageContainer {
+  width: 100%;
+  height: auto;
+  max-height: 600px;
+}
+
+.article--single p {
+  margin-top: 16px;
+}
+
+@media (max-width: 1500px) {
+  .article {
+    width: 45%;
+  }
+  .article .article__imageContainer {
+    height: auto;
+    overflow: hidden;
+  }
+  .article .article__image {
+    width: 100%;
+    height: auto;
+    transition: 0.5s;
+  }
+  .article--single {
+    width: 90%;
+  }
+}
+
+@media (max-width: 930px) {
+  .blog__hero {
+    text-align: center;
+    font-size: 30px;
+  }
+  .blog__hero h1 {
+    font-size: 60px;
+  }
+  .blog__hero h2 {
+    font-size: 20px;
+  }
+  .blog__hero .line--blog {
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .article {
+    width: 90%;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 650px) {
+  .blog__hero {
+    margin: 0 0 10px 2%;
+  }
+  .blog__hero h1 {
+    font-size: 40px;
+  }
+  .blog__hero h2 {
+    font-size: 16px;
+  }
+  .article {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 520px) {
+  .blog__hero {
+    margin: 0 0 10px 2%;
+    font-size: 30px;
+  }
+  .blog__hero h2 {
+    font-size: 12px;
+  }
+  .article .article__header {
+    margin: 20px 20px;
+  }
+  .article .article__content {
+    margin: 20px 20px;
+  }
+  .article--single .article__date {
+    padding: 20px 20px;
+  }
+}
+
+@media (max-width: 520px) {
+  .blog {
+    padding-top: 80px;
+  }
+  .blog__hero h1 {
+    font-size: 24px;
+  }
+  .blog__hero h2 {
+    font-size: 10px;
+  }
+  .article {
+    font-size: 12px;
   }
 }
 /*# sourceMappingURL=mains.css.map */
