--- a/scss/_modulars.scss
+++ b/scss/_modulars.scss
@@ -15,6 +15,18 @@ button {
     max-width: 1000px;
 }
 
+.wrapper--blog {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 1600px;
+}
+
+.line--blog {
+    width: 100%;
+    height: 50px;
+}
+
 div,
 input,
 textarea,
